<resources>
    <string name="app_name">My Application</string>
    <string name="goods_Image">상품 사진</string>
    <string name="Picture_Upload">사진 첨부하기</string>
    <string name="btn_bad">별로에요</string>
    <string name="btn_good">만족해요</string>
    <string name="title_ColorCheck">색상은 어떤가요?</string>
    <string name="btn_dark">어두워요</string>
    <string name="btn_same">화면과 같아요</string>
    <string name="btn_bright">밝아요</string>
    <string name="title_review">자세한 리뷰를 작성해 주세요.</string>
    <string name="text_Review">리뷰를 작성해주세요.</string>
    <string name="btn_ImgUpload">사진 첨부하기</string>
    <string name="btn_ReviewUpload">리뷰 등록하기</string>
    <string name="title_GoodsName">에어팟 케이스</string>
    <string name="title_GoodsTag">에어팟/3세대/단품</string>
    <string name="title_Evaluation">구매하신 상품은 만족하시나요?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">사진</string>
    <string name="smile">이모티콘</string>
    <string name="link">url</string>
    <string name="file">파일</string>
    <string name="settings">설정</string>

    <string name="deliveryText">배송현황</string>
    <string name="eclipseDeliveryText">배송 중</string>
    <string name="itemNameText">상품 명</string>
    <string name="itemNameValue">카드지갑 케이스</string>
    <string name="senderText">보내는분</string>
    <string name="senderName">김진</string>
    <string name="recipientText">받는분</string>
    <string name="recipientName">정현</string>
    <string name="deliveryAddressText">배송지점</string>
    <string name="homeAddressText">서울특별시 광진구 자양동 이튼타워 리버2차</string>
    <string name="orderDetailsText">주문상세</string>
    <string name="orderNumber">주문번호 9010101030</string>
    <string name="orderDate">2024.5.20.주문</string>
    <string name="receipCredit">결제 정보</string>
    <string name="itemPrice">상품 가격</string>
    <string name="requirements">배송요청사항 : 경비실에 보내주세요.</string>

    <string name="title_order01">주문일 2024. 09. 21</string>
    <string name="title_order02">주문일 2024. 09. 20</string>
    <string name="btn_Written_Review">작성된 리뷰</string>
    <string name="goods_Title">에어팟 케이스</string>
    <string name="goods_Tag01">에어팟/3세대/단품</string>
    <string name="btn_Review">리뷰쓰기</string>
    <string name="goods_Tag02">에어팟/pro2/단품</string>
    <string name="goods_AirPod_Pro2">AirPodPro2</string>
    <string name="goods_AirPod_3rd">AirPod3rd</string>
    <string name="btn_Review_01">첫번째 버튼</string>
    <string name="btn_Review_02">두번째 버튼</string>
</resources>