<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ReviewWriteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFF5CF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="리뷰 작성"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/review_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_review">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_goodsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_GoodsName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_goodsTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_GoodsTag"
                app:layout_constraintStart_toStartOf="@+id/title_goodsName"
                app:layout_constraintTop_toBottomOf="@+id/title_goodsName" />

            <!--  상품 평가 부분 -->
            <TextView
                android:id="@+id/title_Evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/title_Evaluation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_goodsTag" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                style="?android:attr/buttonBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_Evaluation">

                <Button
                    android:id="@+id/btn_bad"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_background_color"
                    android:text="@string/btn_bad"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btn_good"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_background_color"
                    android:text="@string/btn_good"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/title_ColorCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_ColorCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                style="?android:attr/buttonBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_ColorCheck">

                <Button
                    android:id="@+id/btn_dark"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_background_color"
                    android:text="@string/btn_dark"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btn_same"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_background_color"
                    android:text="@string/btn_same"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btn_bright"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_background_color"
                    android:text="@string/btn_bright"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/title_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_review"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

            <EditText
                android:id="@+id/text_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/text_Review"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_review"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/Image_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/Picture_Upload"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_review"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <Button
                android:id="@+id/btn_ImgUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#f9de70"
                android:text="@string/btn_ImgUpload"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Image_review" />

            <Button
                android:id="@+id/btn_ReviewUpload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#f9de70"
                android:text="@string/btn_ReviewUpload"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_ImgUpload"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>