<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MypageReviewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reviewtoolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FBE287"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="리뷰"/>

    <TextView
        android:id="@+id/orderdate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_order01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewtoolbar" />

    <TextView
        android:id="@+id/orderdate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_order02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordercard1" />

    <android.widget.Button
        android:id="@+id/writehistorybtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_read_review"
        android:text="@string/btn_Written_Review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordercard2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ordercard1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderdate1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/rv_image1"
                android:layout_width="109dp"
                android:layout_height="104dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/goods_AirPod_3rd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/review_img1" />

            <TextView
                android:id="@+id/rv_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/goods_Title"
                app:layout_constraintStart_toEndOf="@+id/rv_image1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rv_explain1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/goods_Tag01"
                app:layout_constraintStart_toStartOf="@+id/rv_name1"
                app:layout_constraintTop_toBottomOf="@+id/rv_name1" />

            <android.widget.Button
                android:id="@+id/writebtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_write_review"
                android:text="@string/btn_Review"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rv_explain1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/btn_Review_01"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ordercard2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderdate2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/rv_image2"
                android:layout_width="109dp"
                android:layout_height="104dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/goods_AirPod_Pro2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/review_img2" />

            <TextView
                android:id="@+id/rv_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/goods_Title"
                app:layout_constraintStart_toEndOf="@+id/rv_image2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rv_explain2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/goods_Tag02"
                app:layout_constraintStart_toStartOf="@+id/rv_name2"
                app:layout_constraintTop_toBottomOf="@+id/rv_name2" />

            <!--android.widget.Button 색상 적용이 안되서 사용함 -->
            <android.widget.Button
                android:id="@+id/writebtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@null"
                android:background="@drawable/btn_write_review"
                android:text="@string/btn_Review"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rv_explain2"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/btn_Review_02"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>