<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/backButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FBE287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/orderdetailsBarText"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="주문완료"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/orderdetails_backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            android:contentDescription="뒤로 가기 버튼"
            android:src="@drawable/back" />
    </FrameLayout>

    <TextView
        android:id="@+id/orderdetails_orderDate"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/interbold"
        android:gravity="top"
        android:text="@string/orderDate"
        android:textAppearance="@style/orderDate"
        android:background="@drawable/buttonset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oderdetails_orderNumber"
        android:layout_width="170sp"
        android:layout_height="25dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="24dp"
        android:gravity="top"
        android:text="@string/orderNumber"
        android:background="@drawable/buttonset"
        android:textAppearance="@style/orderNumber"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/reportReceipt"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderdetails_orderDate" />

    <View
        android:id="@+id/line_22"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/line_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryPrice" />

    <TextView
        android:id="@+id/receipCredit"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/interbold"
        android:gravity="top"
        android:text="@string/receipCredit"
        android:background="@drawable/buttonset"
        android:textAppearance="@style/receipCredit"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/reportReceipt"
        app:layout_constraintTop_toTopOf="@+id/reportReceipt" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:text="@string/itemPrice"
        android:background="@drawable/buttonset"
        android:textAppearance="@style/itemPrice"
        app:layout_constraintStart_toEndOf="@+id/reportReceipt"
        app:layout_constraintStart_toStartOf="@+id/reportReceipt"
        app:layout_constraintTop_toBottomOf="@+id/receipCredit" />

    <TextView
        android:id="@+id/deliveryPrice"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="배송비"
        android:background="@drawable/buttonset"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/reportReceipt"
        app:layout_constraintStart_toStartOf="@+id/reportReceipt"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <TextView
        android:id="@+id/itemprice"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/interbold"
        android:text="100000 원"
        android:background="@drawable/buttonset"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/reportReceipt"
        app:layout_constraintTop_toTopOf="@+id/reportReceipt" />

    <TextView
        android:id="@+id/boxPrice"
        android:layout_width="101dp"
        android:layout_height="27dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/interbold"
        android:text="0 원"
        android:background="@drawable/buttonset"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/reportReceipt"
        app:layout_constraintTop_toBottomOf="@+id/itemprice" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/interbold"
        android:text="총 결제금액"
        android:background="@drawable/buttonset"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/reportReceipt"
        app:layout_constraintTop_toBottomOf="@+id/line_22" />

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/interbold"
        android:text="100000 원"
        android:background="@drawable/buttonset"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/reportReceipt"
        app:layout_constraintTop_toBottomOf="@+id/line_22" />

    <View
        android:id="@+id/addressBox"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportReceipt" />

    <TextView
        android:id="@+id/orderdetails_PriceName"
        android:layout_width="71dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/interbold"
        android:text="김우진"
        android:background="@drawable/buttonset"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/addressBox"
        app:layout_constraintTop_toTopOf="@+id/addressBox" />

    <TextView
        android:id="@+id/oderdetails_homeAddress"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/interbold"
        android:text="서울특별시 광진구 자양동 이튼타워 리버 2차"
        android:background="@drawable/buttonset"
        app:layout_constraintEnd_toEndOf="@+id/addressBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/addressBox"
        app:layout_constraintTop_toBottomOf="@+id/orderdetails_PriceName" />

    <TextView
        android:id="@+id/oderdetails_PhoneNumber"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/interbold"
        android:text="010-1234-5678"
        android:background="@drawable/buttonset"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/addressBox"
        app:layout_constraintTop_toBottomOf="@+id/oderdetails_homeAddress" />

    <View
        android:id="@+id/line_23"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/line_22"
        app:layout_constraintEnd_toEndOf="@+id/addressBox"
        app:layout_constraintStart_toStartOf="@+id/addressBox"
        app:layout_constraintTop_toBottomOf="@+id/oderdetails_PhoneNumber" />

    <TextView
        android:id="@+id/oderdetails_requirements"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="top"
        android:text="@string/requirements"
        android:textAppearance="@style/requirements"
        android:textStyle="bold"
        android:fontFamily="@font/interbold"
        app:layout_constraintBottom_toBottomOf="@+id/addressBox"
        app:layout_constraintEnd_toEndOf="@+id/addressBox"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/addressBox"
        app:layout_constraintTop_toBottomOf="@+id/line_23"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/returnHomeButton"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/orderbuttonset"
        android:text="홈으로 돌아가기"
        android:fontFamily="@font/interbold"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressBox" />

</androidx.constraintlayout.widget.ConstraintLayout>